# git-fast-reword

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  wrappers.hpp
